# Jetnet-Api-Hub

./: .env.example  .gitignore  .replit  README.md  START_HERE.md  llms-full.txt  llms.txt  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Jetnet-Api-Hub-Vibe-Coder-Upgrade-Pack-Items-4-9-Object_1772228384452.txt  SKILL_1772210544861.md  buildkit_1772210557357.md  endpoints_1772210557357.md  evals_1772210574551.json  id-glossary_1772210557358.md  jetnet-api-guide_1772230475826.html  validate_payload_1772210549410.py  vertical-playbooks_1772210557359.md
docs/: aircraft.md  airports.md  authentication.md  bulk-export.md  common-mistakes.md  companies.md  contacts.md  data-model.md  enum-reference.md  events.md  flight-data.md  history.md  id-system.md  jetnet-lite.md  junior-dev-guide.md  model-data.md  pagination.md  response-handling.md  response-shapes.md  snapshots.md  trends.md  utility-endpoints.md
evals/: evals.json
examples/javascript/: 01_authentication.js  02_tail_lookup.js  03_fleet_search.js  04_ownership.js  06_valuation.js  (+3 more)
mcp/: README.md  claude_desktop_config.example.json  jetnet_mcp.py
prompts/: 01_golden_path_tail_lookup_app.md  02_fbo_airport_activity_leads.md  03_fleet_watchlist_alerts.md  04_bulk_export_pipeline.md  05_mcp_agent_workflow.md  README.md
references/: endpoints.md  model-id-table.csv  model-id-table.json  model-ids.md  vertical-playbooks.md
scripts/: model_search.py  paginate.py  token_probe.py  validate_payload.py
snippets/: fleet.md  helpers.js  ownership.md  specifications.md  usage.md  valuation.md
(+39 files in other folders)
