[project]
name = "jetnet-api-docs"
version = "1.1.0"
description = "JETNET API Documentation & Examples - Complete developer guide for the JETNET aviation database API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
